environments/bose-dev/apps/app-fruit-app/services/fruit-app/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: fruit-app
  namespace: bose-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fruit-app
      app.kubernetes.io/part-of: app-fruit-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: fruit-app
        app.kubernetes.io/part-of: app-fruit-app
    spec:
      containers:
      - image: quay.io/shbose/fruit-app:master-352edfe82a88301130a0fafc8bd87655ed382659
        imagePullPolicy: Always
        name: fruit-app
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
