environments/bose-dev/apps/app-fruit-app/services/fruit-app/base/config/300-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fruit-app
  namespace: bose-dev
spec:
  to:
    kind: Service
    name: fruit-app
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
